rename copyright + index : added about link

--- a/index.html
+++ b/index.html
@@ -113,10 +113,14 @@
 
         <div class="row p-5 justify-content-center">
             <div class="col-sm-12 text-center text-black">
-                <a href="about.html" style="text-decoration:none; color:black;"><p class="display-4 typewriter d-none d-sm-block">A propos de Nous</p></a>
+                <a href="about.html" style="text-decoration:none; color:black;">
+                    <p class="display-4 typewriter d-none d-sm-block">A propos de Nous</p>
+                </a>
             </div>
             <div class="col-sm-12 text-center text-black">
-                <a href="about.html" style="text-decoration:none; color:black;"><h3 class="typewriter d-block d-sm-none">A propos de Nous</h3></a>
+                <a href="about.html" style="text-decoration:none; color:black;">
+                    <h3 class="typewriter d-block d-sm-none">A propos de Nous</h3>
+                </a>
             </div>
         </div>
         <div class="row p-3 text-black justify-content-center text-center">
@@ -148,6 +152,17 @@
             </div><!-- /.col-lg-6 -->
         </div>
 
+        <div class="row p-5"></div>
+        <div class="row p-"></div>
+        <div class="jumbotron hideme text-center">
+            <h1 class="display-5">
+                <a class="btn btn-primary btn-lg zoom-in" href="about.html" style="font-size: 2rem;" role="button">
+                    Découvrir nos projets
+                </a>
+            </h1>
+            <p>Merci pour vôtre visite et bonne lecture !</p>
+        </div>
+        <hr class="my-4">
         <div class="row justify-content-center p-2">
             <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
                 <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i
@@ -160,10 +175,10 @@
         <!-- Copyright -->
         <div class="text-center text-black text-decoration-none p-3">
             © 2021 Copyright:
-            <a href="index.html" style="color: black;">PROJET CANADA!</a>
+            <a href="index.html" style="color: black;">KC-TRAVELS !</a>
         </div>
     </div>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
