--- a/about.html
+++ b/about.html
@@ -214,7 +214,7 @@
                 <!-- Copyright -->
                 <div class="text-center text-decoration-none p-3">
                     © 2021 Copyright:
-                    <a href="index.html" style="color:white;">PROJET CANADA!</a>
+                    <a href="index.html" style="color:white;">KC-TRAVELS !</a>
                 </div>
             </div>
 
