--- a/base_NO_EDIT.html
+++ b/base_NO_EDIT.html
@@ -70,7 +70,7 @@
         <!-- Copyright -->
         <div class="text-center text-black text-decoration-none p-3">
             © 2021 Copyright:
-            <a href="index.html" style="color: black;">PROJET CANADA!</a>
+            <a href="index.html" style="color: black;">KC-TRAVELS !</a>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
