--- a/calanques.html
+++ b/calanques.html
@@ -148,7 +148,7 @@
         <!-- Copyright -->
         <div class="text-center text-black text-decoration-none p-3">
             © 2021 Copyright:
-            <a href="index.html" style="color: black;">PROJET CANADA!</a>
+            <a href="index.html" style="color: black;">KC-TRAVELS !</a>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
