--- a/nimes.html
+++ b/nimes.html
@@ -69,7 +69,7 @@
         <!-- Copyright -->
         <div class="text-center text-black text-decoration-none p-3">
             © 2021 Copyright:
-            <a href="index.html" style="color: black;">PROJET CANADA!</a>
+            <a href="index.html" style="color: black;">KC-TRAVELS !</a>
         </div>
     </div>
 </body>
