--- a/about.html
+++ b/about.html
@@ -204,13 +204,13 @@
                     </div>
                 </div>
                 <div class="row hideme justify-content-center p-2 text-light">
-                    <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
+                    <hr class="my-4"><div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
                         <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill zoom-in"><i
                                     class="fab fa-instagram text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                         <a href="#"><span class="badge rounded-pill zoom-in"><i
                                     class="fas fa-shopping-basket text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                     </div>
-                </div>
+                </hr>
                 <!-- Copyright -->
                 <div class="text-center text-decoration-none p-3">
                     © 2021 Copyright:
