--- a/blog.html
+++ b/blog.html
@@ -88,7 +88,7 @@
         <div class="row  p-4"></div>
         <!-- end -->
         <div class="row  justify-content-center p-2">
-            <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
+            <hr class="my-4"><div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
                 <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                 <a href="about.html#donate"><span class="badge rounded-pill text-dark zoom-in"><i
