--- a/nimes.html
+++ b/nimes.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="row justify-content-center p-2">
-            <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
+            <hr class="my-4"><div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
                 <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
 
