alot cxqp;fjklnsgs
-mansory test
-lightbox installation

--- a/base_NO_EDIT.html
+++ b/base_NO_EDIT.html
@@ -14,6 +14,11 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/png" href="IMG\logo1.png" />
     <script src="JS/scroll_down.js"></script>
+    <script src="JS/mansory.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
+        integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"
+        async>
+    </script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
     </style>
