mansory update on the portfolio
all pages + responsive + save of old pages .

--- a/test_mansory.html
+++ b/test_mansory.html
@@ -82,9 +82,8 @@
                             <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
                                 src="IMG/portfolio/landscape/1_land.JPG" alt="">
                         </a>
-                        <h2 class="h4">Masonry grid item</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h2 class="h4">Pradet</h2>
+                        <p class="small text-muted font-italic">Cap de Carqueiranne</p>
                     </div>
                     <!-- Grid item -->
                     <div class="col-lg-4 col-md-6 grid-item mb-4">
@@ -92,9 +91,8 @@
                             <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
                                 src="IMG/portfolio/landscape/2_land.JPG" alt="">
                         </a>
-                        <h2 class="h4">Masonry grid item</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h2 class="h4">Anse Méjean</h2>
+                        <p class="small text-muted font-italic">"L'escale"</p>
                     </div>
                     <!-- Grid item -->
                     <div class="col-lg-4 col-md-6 grid-item mb-4">
@@ -102,9 +100,8 @@
                             <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
                                 src="IMG/portfolio/landscape/3_land.JPG" alt="">
                         </a>
-                        <h2 class="h4">Masonry grid item</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h2 class="h4">Port de Méjean</h2>
+                        <p class="small text-muted font-italic">Vu sur Chapelle Notre-Dame-du-Cap-Falcon</p>
                     </div>
                     <!-- Grid item -->
                     <div class="col-lg-4 col-md-6 grid-item mb-4">
@@ -112,63 +109,48 @@
                             <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
                                 src="IMG/portfolio/landscape/4_land.JPG" alt="">
                         </a>
-                        <h2 class="h4">Masonry grid item</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h2 class="h4">Verdon</h2>
+                        <p class="small text-muted font-italic">Lac de Sainte-Croix</p>
                     </div>
                     <!-- Grid item -->
                     <div class="col-lg-4 col-md-6 grid-item mb-4">
                         <a href="IMG/portfolio/landscape/5_land.JPG" data-lightbox="land">
                             <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
                                 src="IMG/portfolio/landscape/5_land.JPG" alt=""></a>
-                        <h2 class="h4">Masonry grid item</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h2 class="h4">Ile du Gaou</h2>
+                        <p class="small text-muted font-italic">Pointe du Cougoussa</p>
                     </div>
                     <!-- Grid item -->
                     <div class="col-lg-4 col-md-6 grid-item mb-4">
                         <a href="IMG/portfolio/landscape/6_land.JPG" data-lightbox="land">
                             <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
                                 src="IMG/portfolio/landscape/6_land.JPG" alt=""></a>
-                        <h2 class="h4">Masonry grid item</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h2 class="h4">La Tour Royale</h2>
+                        <p class="small text-muted font-italic">Toulon</p>
                     </div>
                     <!-- Grid item -->
                     <div class="col-lg-4 col-md-6 grid-item mb-4">
                         <a href="IMG/portfolio/landscape/7_land.JPG" data-lightbox="land">
                             <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
                                 src="IMG/portfolio/landscape/7_land.JPG" alt=""></a>
-                        <h2 class="h4">Masonry grid item</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                    <!-- Grid item -->
-                    <div class="col-lg-4 col-md-6 grid-item mb-4">
-                        <a href="IMG/portfolio/landscape/8_land.JPG" data-lightbox="land">
-                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
-                                src="IMG/portfolio/landscape/8_land.JPG" alt=""></a>
-                        <h2 class="h4">Masonry grid item</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
+                        <h2 class="h4">Anse Magaud</h2>
+                        <p class="small text-muted font-italic">Falaise Ouest</p>
+                    </div>                    
                     <!-- Grid item -->
                     <div class="col-lg-4 col-md-6 grid-item mb-4">
                         <a href="IMG/portfolio/landscape/9_land.JPG" data-lightbox="land">
                             <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
                                 src="IMG/portfolio/landscape/9_land.JPG" alt=""></a>
-                        <h2 class="h4">Masonry grid item</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h2 class="h4">Port de Méjean</h2>
+                        <p class="small text-muted font-italic">Panorama Saint-Mandrier</p>
                     </div>
                     <!-- Grid item -->
                     <div class="col-lg-4 col-md-6 grid-item mb-4">
                         <a href="IMG/portfolio/landscape/10_land.JPG" data-lightbox="land">
                             <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
                                 src="IMG/portfolio/landscape/10_land.JPG" alt=""></a>
-                        <h2 class="h4">Masonry grid item</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h2 class="h4">Pradet</h2>
+                        <p class="small text-muted font-italic">Plage des Bonettes</p>
                     </div>
                     <!-- Grid item -->
                     <div class="col-lg-4 col-md-6 grid-item mb-4">
@@ -176,9 +158,16 @@
                             <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
                                 src="IMG/portfolio/landscape/11_land.JPG" alt="">
                         </a>
-                        <h2 class="h4">TEST</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <h2 class="h4">Marégau</h2>
+                        <p class="small text-muted font-italic">Saint-Mandrier</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/landscape/8_land.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/landscape/8_land.JPG" alt=""></a>
+                        <h2 class="h4">Tour Royale</h2>
+                        <p class="small text-muted font-italic">Toulon</p>
                     </div>
                 </div>
             </div>
