--- a/landscape.html
+++ b/landscape.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>K&C-Landscape</title>
+    <title>K&C</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
@@ -12,9 +12,14 @@
     <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="icon" type="image/png" href="IMG\logo1.png" />
+    <link rel="icon" type="image/png" href="IMG/logo1.png" />
     <script src="JS/scroll_down.js"></script>
-    
+    <script src="JS/mansory.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
+        integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"
+        async>
+        </script>
+    <link href="lightbox2-2.11.3\src\css\lightbox.css" rel="stylesheet" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
     </style>
@@ -48,7 +53,6 @@
                     <a href="https://www.instagram.com/k.c_travels/"><span
                             class="badge rounded-pill text-dark zoom-in"><i
                                 class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-
                     <a href="about.html#donate"><span class="badge rounded-pill text-dark zoom-in"><i
                                 class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                 </span>
@@ -64,146 +68,113 @@
                 </p>
             </div>
         </div>
-        <div class="row justify-content-center text-center p-5">
-            <!--KT-->
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\1_land.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Pradet
-                            <br>
-                            <p style="font-size:1vmax;">Cap de Carqueiranne</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\3_land.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Anse Méjean
-                            <br>
-                            <p style="font-size:1vmax;">"L'escale"</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\landscape\2_land.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Port de Méjean
-                            <br>
-                            <p style="font-size:1vmax;">Vu sur Chapelle Notre-Dame-du-Cap-Falcon</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\4_land.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Verdon
-                            <br>
-                            <p style="font-size:1vmax;">Lac de Ste-Croix</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\5_land.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Ile du Gaou
-                            <br>
-                            <p style="font-size:1vmax;">Pointe du Cougoussa</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\6_land.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            La Tour Royale
-                            <br>
-                            <p style="font-size:1vmax;">Toulon</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\landscape\7_land.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Anse Magaud
-                            <br>
-                            <p style="font-size:1vmax;">Falaise Ouest</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\8_land.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Tour Royale
-                            <br>
-                            <p style="font-size:1vmax;">Toulon</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\9_land.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Port de Méjean
-                            <br>
-                            <p style="font-size:1vmax;">Panorama Saint-Mandrier</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\10_land.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Pradet
-                            <br>
-                            <p style="font-size:1vmax;">Plage des Bonnettes</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\landscape\11_land.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Marégau
-                            <br>
-                            <p style="font-size:1vmax;">Saint-Mandrier</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="row p-lg-4"></div>
+        <section class="pb-5 h-100 p-2">
+            <div class="container text-center">
+                <!-- Masonry grid -->
+                <div class="gallery-wrapper">
+                    <!-- Grid sizer -->
+                    <div class="grid-sizer col-lg-4 col-md-6"></div>
 
-
-        <div class="row p-4"></div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/landscape/1_land.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/landscape/1_land.JPG" alt="">
+                        </a>
+                        <h2 class="h4">Pradet</h2>
+                        <p class="small text-muted font-italic">Cap de Carqueiranne</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/landscape/2_land.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/landscape/2_land.JPG" alt="">
+                        </a>
+                        <h2 class="h4">Anse Méjean</h2>
+                        <p class="small text-muted font-italic">"L'escale"</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/landscape/3_land.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/landscape/3_land.JPG" alt="">
+                        </a>
+                        <h2 class="h4">Port de Méjean</h2>
+                        <p class="small text-muted font-italic">Vu sur Chapelle Notre-Dame-du-Cap-Falcon</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/landscape/4_land.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/landscape/4_land.JPG" alt="">
+                        </a>
+                        <h2 class="h4">Verdon</h2>
+                        <p class="small text-muted font-italic">Lac de Sainte-Croix</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/landscape/5_land.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/landscape/5_land.JPG" alt=""></a>
+                        <h2 class="h4">Ile du Gaou</h2>
+                        <p class="small text-muted font-italic">Pointe du Cougoussa</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/landscape/6_land.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/landscape/6_land.JPG" alt=""></a>
+                        <h2 class="h4">La Tour Royale</h2>
+                        <p class="small text-muted font-italic">Toulon</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/landscape/7_land.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/landscape/7_land.JPG" alt=""></a>
+                        <h2 class="h4">Anse Magaud</h2>
+                        <p class="small text-muted font-italic">Falaise Ouest</p>
+                    </div>                    
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/landscape/9_land.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/landscape/9_land.JPG" alt=""></a>
+                        <h2 class="h4">Port de Méjean</h2>
+                        <p class="small text-muted font-italic">Panorama Saint-Mandrier</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/landscape/10_land.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/landscape/10_land.JPG" alt=""></a>
+                        <h2 class="h4">Pradet</h2>
+                        <p class="small text-muted font-italic">Plage des Bonettes</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/landscape/11_land.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/landscape/11_land.JPG" alt="">
+                        </a>
+                        <h2 class="h4">Marégau</h2>
+                        <p class="small text-muted font-italic">Saint-Mandrier</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/landscape/8_land.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/landscape/8_land.JPG" alt=""></a>
+                        <h2 class="h4">Tour Royale</h2>
+                        <p class="small text-muted font-italic">Toulon</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <div class="row justify-content-center p-2">
-            <hr class="my-4"><div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
+            <hr class="my-4">
+            <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
                 <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
 
@@ -217,13 +188,13 @@
             <a href="index.html" style="color: black;">KC-TRAVELS !</a>
         </div>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="lightbox2-2.11.3\src\js\lightbox.js"></script>
 </body>
 
 </html>
