--- a/other.html
+++ b/other.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>KT-Other</title>
+    <title>K&C</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
@@ -12,13 +12,14 @@
     <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="icon" type="image/png" href="IMG\logo1.png" />
+    <link rel="icon" type="image/png" href="IMG/logo1.png" />
     <script src="JS/scroll_down.js"></script>
     <script src="JS/mansory.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
         integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"
         async>
-    </script>
+        </script>
+    <link href="lightbox2-2.11.3\src\css\lightbox.css" rel="stylesheet" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
     </style>
@@ -47,15 +48,11 @@
                     <li class="nav-item">
                         <a class="nav-link zoom-in " href="about.html">ABOUT</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link zoom-in" href="about.html">ABOUT
-                    </li>
                 </ul>
                 <span class="navbar-text" style="font-size:20px;">
                     <a href="https://www.instagram.com/k.c_travels/"><span
                             class="badge rounded-pill text-dark zoom-in"><i
                                 class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-
                     <a href="about.html#donate"><span class="badge rounded-pill text-dark zoom-in"><i
                                 class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                 </span>
@@ -64,7 +61,7 @@
         <div class="row p-lg-4"></div>
         <div class="row p-4 justify-content-center">
             <div class="col-12 text-center">
-                <p class="display-4">OTHER</p>
+                <p class="display-4">LANDSCAPE</p>
             </div>
             <div class="col-12 text-center">
                 <p class="display-6" style="font-size: 2vmax;">Here you will find everything that I think didn't match
@@ -72,171 +69,111 @@
                 </p>
             </div>
         </div>
-        <div class="row justify-content-center text-center p-5">
-            <!--KT-->
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\1.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Osteospermum
-                            <br>
-                            <p style="font-size:1vmax;">Mon Jardin</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\2.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Kevin
-                            <br>
-                            <p style="font-size:1vmax;">Verdon</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\other\3.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            "Doggo"
-                            <br>
-                            <p style="font-size:1vmax;">Place Liberté</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\4.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Clara
-                            <br>
-                            <p style="font-size:1vmax;">Verdon (argentique)</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\5.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            "BrewMan"
-                            <br>
-                            <p style="font-size:1vmax;">Place Liberté</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\6.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            "HeineMan"
-                            <br>
-                            <p style="font-size:1vmax;">WEI</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\other\7.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Osteospermum
-                            <br>
-                            <p style="font-size:1vmax;">Mon Jardin</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\8.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Kevin
-                            <br>
-                            <p style="font-size:1vmax;">Verdon</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\9.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Holi powder
-                            <br>
-                            <p style="font-size:1vmax;">WEI</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\10.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Osteospermum
-                            <br>
-                            <p style="font-size:1vmax;">Mon Jardin</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\11.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Broken cam
-                            <br>
-                            <p style="font-size:1vmax;">Toulon</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <section class="pb-5">
+        <div class="row p-lg-4"></div>
+        <section class="pb-5 h-100 p-2">
             <div class="container text-center">
                 <!-- Masonry grid -->
                 <div class="gallery-wrapper">
                     <!-- Grid sizer -->
                     <div class="grid-sizer col-lg-4 col-md-6"></div>
-    
+
                     <!-- Grid item -->
                     <div class="col-lg-4 col-md-6 grid-item mb-4">
-                        <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3" src="IMG/portfolio/other/1.jpg" alt="">
-                        <h2 class="h4">Masonry grid item</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div><!-- Grid item -->
-                    <div class="col-lg-4 col-md-6 grid-item mb-4">
-                        <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3" src="IMG/portfolio/other/6.jpg" alt="">
-                        <h2 class="h4">Masonry grid item</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div><!-- Grid item -->
-                    <div class="col-lg-4 col-md-6 grid-item mb-4">
-                        <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3" src="IMG/portfolio/other/3.jpg" alt="">
-                        <h2 class="h4">Masonry grid item</h2>
-                        <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <a href="IMG/portfolio/other/1.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/other/1.JPG" alt="">
+                        </a>
+                        <h2 class="h4">Osteospermum</h2>
+                        <p class="small text-muted font-italic">Mon Jardin</p>
                     </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/other/2.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/other/2.JPG" alt="">
+                        </a>
+                        <h2 class="h4">Kevin</h2>
+                        <p class="small text-muted font-italic">Verdon</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/other/3.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/other/3.JPG" alt="">
+                        </a>
+                        <h2 class="h4">"Doggo"</h2>
+                        <p class="small text-muted font-italic">Place de la Liberté - Toulon</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/other/4.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/other/4.JPG" alt="">
+                        </a>
+                        <h2 class="h4">Verdon</h2>
+                        <p class="small text-muted font-italic">Verdon (argentique)</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/other/5.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/other/5.JPG" alt=""></a>
+                        <h2 class="h4">"BrewMan</h2>
+                        <p class="small text-muted font-italic">Place de la Liberté - Toulon</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/other/6.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/other/6.JPG" alt=""></a>
+                        <h2 class="h4">"HeineMan"</h2>
+                        <p class="small text-muted font-italic">WEI</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/other/7.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/other/7.JPG" alt=""></a>
+                        <h2 class="h4">Osteospermum</h2>
+                        <p class="small text-muted font-italic">Mon Jardin</p>
+                    </div>                    
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/other/8.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/other/8.JPG" alt=""></a>
+                        <h2 class="h4">Kevin</h2>
+                        <p class="small text-muted font-italic">Verdon</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/other/9.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/other/9.JPG" alt=""></a>
+                        <h2 class="h4">Holi powder</h2>
+                        <p class="small text-muted font-italic">WEI</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/other/10.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/other/10.JPG" alt=""></a>
+                        <h2 class="h4">Osteospermum</h2>
+                        <p class="small text-muted font-italic">Mon Jardin</p>
+                    </div>
+                    <!-- Grid item -->
+                    <div class="col-lg-4 col-md-6 grid-item mb-4">
+                        <a href="IMG/portfolio/other/11.JPG" data-lightbox="land">
+                            <img class="img-fluid w-100 mb-3 img-fluid rounded-0 p-3"
+                                src="IMG/portfolio/other/11.JPG" alt="">
+                        </a>
+                        <h2 class="h4">Broken Cam</h2>
+                        <p class="small text-muted font-italic">Gare de Toulon</p>
+                    </div>
+                    
                 </div>
             </div>
         </section>
-        <div class="row p-4"></div>
         <div class="row justify-content-center p-2">
             <hr class="my-4">
             <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
@@ -253,13 +190,13 @@
             <a href="index.html" style="color: black;">KC-TRAVELS !</a>
         </div>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="lightbox2-2.11.3\src\js\lightbox.js"></script>
 </body>
 
 </html>
